syntax = "proto3";

package account.proto;

option go_package = "api-service-go/gen;gen";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";
import "user.proto";

message Auth {
    string token = 1;
    int64 expires_in = 2;
    user.proto.User user = 3;
}

message LoginRequest {
    string email = 1 [(validate.rules).string = {email: true, min_len: 1}];
    string password = 2 [(validate.rules).string = {min_len: 1}];
}

message RegisterRequest {
  string email = 1 [(validate.rules).string = {email: true, min_len: 1}];
  string password = 2 [(validate.rules).string = {min_len: 1}];
  string password_confirmation = 3 [(validate.rules).string = {min_len: 1}];
}

message VerifyAccountRequest {
  string email = 1 [(validate.rules).string = {email: true, min_len: 1}];
  string token = 2 [(validate.rules).string = {min_len: 1}];
}

service AccountService {
  rpc Login(LoginRequest) returns (Auth) {
    option (google.api.http) = {
      delete: "/api/v1/login"
    };
  }

  rpc Register(RegisterRequest) returns (Auth) {
    option (google.api.http) = {
      delete: "/api/v1/register"
    };
  }

  rpc VerifyAccount(VerifyAccountRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/v1/verify/{token}"
    };
  }
}