syntax = "proto3";

package role.proto;

option go_package = "api-service-go/gen;gen";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";
import "permission.proto";

message Role {
  uint32 ID = 1;
  string name = 2 [(validate.rules).string = {min_bytes: 1}];
  // repeated Role parents = 3;
  repeated permission.proto.Permission permissions = 4;
}

message Roles {
  repeated Role roles = 1;
}

message GetRole {
  int32 ID = 1;
}

message GetRoles {
}

message DeleteRole {
  int32 ID = 1;
}

service RoleService {
  rpc Add(Role) returns (Role) {
    option (google.api.http) = {
      post: "/api/v1/roles"
      body: "*"
    };
  }
  rpc Edit(Role) returns (Role) {
    option (google.api.http) = {
      put: "/api/v1/roles/{ID}"
      body: "*"
    };
  }
  rpc Get(GetRole) returns (Role) {
    option (google.api.http) = {
      get: "/api/v1/roles/{ID}"
    };
  }
  rpc GetAll(GetRoles) returns (Roles) {
    option (google.api.http) = {
      get: "/api/v1/roles"
    };
  }
  rpc Delete(DeleteRole) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/v1/roles/{ID}"
    };
  }
}
